<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/popular_item"
            android:tint="@color/button_grey"
            android:title="По популярности" />
        <item
            android:id="@+id/date_item"
            android:tint="@color/button_grey"
            android:title="По дате" />
    </group>
</menu>